🎈 perf(mysql-exporter): fix alerts and other bugs

--- a/prometheus-mysql-exporter/templates/prometheusrule.yaml
+++ b/prometheus-mysql-exporter/templates/prometheusrule.yaml
@@ -1,5 +1,4 @@
-{{- if .Values.prometheusRule.enabled }}
----
+{{- if .Values.alerts.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -7,13 +6,68 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "prometheus-mysql-exporter.labels" . | nindent 4 }}
-{{- if .Values.prometheusRule.labels }}
-{{- toYaml .Values.prometheusRule.labels | nindent 4 }}
-{{- end }}
+    prometheusrule.kubegems.io/name: {{ template "prometheus-mysql-exporter.fullname" . }}
+    prometheusrule.kubegems.io/name: monitor
 spec:
-{{- with .Values.prometheusRule.rules }}
   groups:
-    - name: {{ template "prometheus-mysql-exporter.fullname" $ }}
-      rules: {{ tpl (toYaml .) $ | nindent 8 }}
-{{- end }}
+    - name: MysqlDown
+      rules:
+        - alert: MysqlDown
+          expr: mysql_up{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"} == 0
+          for: 0m
+          labels:
+            gems_alert_from: monitor
+            gems_alert_scope: normal
+            gems_alertname: MysqlDown
+            gems_namespace: "{{ .Release.Namespace }}"
+            severity: critical
+          annotations:
+            description: MySQL instance is down on {{ "{{ $labels.instance }}" }}  VALUE={{ "{{ $value }}" }}  LABELS={{ "{{ $labels }}" }}
+            message: MySQL down instance {{ "{{ $labels.instance }}" }}
+            value: '{{"{{ $value"}} | printf "%.1f" }}'
+    - name: MysqlTooManyConnections
+      rules:            
+        - alert: MysqlTooManyConnections
+          expr: max_over_time(mysql_global_status_threads_connected{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"}[1m]) / mysql_global_variables_max_connections{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"} * 100 > 80
+          for: 2m
+          labels:
+            gems_alert_from: monitor
+            gems_alert_scope: normal
+            gems_alertname: MysqlTooManyConnections
+            gems_namespace: "{{ .Release.Namespace }}"
+            severity: error
+          annotations:
+            message: MySQL too many connections > 80% instance {{ "{{ $labels.instance }}" }}
+            value: '{{"{{ $value"}} | printf "%.1f" }}'
+            description: More than 80% of MySQL connections are  {{ "{{ $labels.instance }}" }}  VALUE={{ "{{ $value }}" }}  LABELS={{ "{{ $labels }}" }}
+    - name: MysqlSlowQueries
+      rules:              
+        - alert: MysqlSlowQueries
+          expr: increase(mysql_global_status_slow_queries{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"}[1m]) > 0
+          for: 2m
+          labels:
+            gems_alert_from: monitor
+            gems_alert_scope: normal
+            gems_alertname: MysqlSlowQueries
+            gems_namespace: "{{ .Release.Namespace }}"
+            severity: error
+          annotations:
+            message: MySQL slow queries instance {{ "{{ $labels.instance }}" }}
+            value: '{{"{{ $value"}} | printf "%.1f" }}'
+            description: MySQL server mysql has some new slow query VALUE={{ "{{ $value }}" }}  LABELS={{ "{{ $labels }}" }} 
+    - name: MysqlRestarted
+      rules:              
+        - alert: MysqlRestarted
+          expr: mysql_global_status_uptime{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"} < 60
+          for: 0m
+          labels:
+            gems_alert_from: monitor
+            gems_alert_scope: normal
+            gems_alertname: MysqlRestarted
+            gems_namespace: "{{ .Release.Namespace }}"
+            severity: error
+          annotations:
+            message: MySQL restarted instance {{ "{{ $labels.instance }}" }}
+            value: '{{"{{ $value"}} | printf "%.1f" }}'
+            description: MySQL has just been restarted on {{ "{{ $labels.instance }}" }} VALUE={{ "{{ $value }}" }} LABELS={{ "{{ $labels }}" }}
 {{- end }}
