--- a/prometheus-mysql-exporter/values.yaml
+++ b/prometheus-mysql-exporter/values.yaml
@@ -24,14 +24,15 @@ serviceMonitor:
   # enabled should be set to true to enable prometheus-operator discovery of this service
   enabled: true
   # interval is the interval at which metrics should be scraped
-  interval: 60s
+  interval: 30s
   # scrapeTimeout is the timeout after which the scrape is ended
   scrapeTimeout: 10s
   # namespace: monitoring
   # additionalLabels is the set of additional labels to add to the ServiceMonitor
   path: /metrics
   scheme: http
-  additionalLabels: {}
+  additionalLabels:
+    release: kube-prometheus-stack
   jobLabel: ""
   targetLabels: []
   podTargetLabels: []
@@ -161,45 +162,6 @@ cloudsqlproxy:
     #   "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/user%40project.iam.gserviceaccount.com"
     # }
 
-prometheusRule:
-  ## If true, a PrometheusRule CRD is created for a prometheus operator
-  ## https://github.com/coreos/prometheus-operator
-  ##
-  ## The rules will be processed as Helm template, allowing to set variables in them.
+# include prometheusrule groups and alertmanagerconfig routes
+alerts:
   enabled: true
-  #  namespace: monitoring
-  labels: 
-    prometheusRule: gemcloud
-  rules: 
-    - alert: MysqlDown
-      expr: mysql_up{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"} == 0
-      for: 0m
-      labels:
-        severity: critical
-      annotations:
-        description: MySQL instance is down on {{ "{{ $labels.instance }}" }}  VALUE={{ "{{ $value }}" }}  LABELS={{ "{{ $labels }}" }}
-        summary: MySQL down instance {{ "{{ $labels.instance }}" }}
-    - alert: MysqlTooManyConnections > 80%
-      expr: max_over_time(mysql_global_status_threads_connected{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"}[1m]) / mysql_global_variables_max_connections{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"} * 100 > 80
-      for: 2m
-      labels:
-        severity: warning
-      annotations:
-        summary: MySQL too many connections > 80% instance {{ "{{ $labels.instance }}" }}
-        description: More than 80% of MySQL connections are  {{ "{{ $labels.instance }}" }}  VALUE={{ "{{ $value }}" }}  LABELS={{ "{{ $labels }}" }}
-    - alert: MysqlSlowQueries
-      expr: increase(mysql_global_status_slow_queries{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"}[1m]) > 0
-      for: 2m
-      labels:
-        severity: warning
-      annotations:
-        summary: MySQL slow queries instance {{ "{{ $labels.instance }}" }}
-        description: MySQL server mysql has some new slow query VALUE={{ "{{ $value }}" }}  LABELS={{ "{{ $labels }}" }} 
-    - alert: MysqlRestarted
-      expr: mysql_global_status_uptime{service="{{ template "prometheus-mysql-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"} < 60
-      for: 0m
-      labels:
-        severity: info
-      annotations:
-        summary: MySQL restarted instance {{ "{{ $labels.instance }}" }}
-        description: MySQL has just been restarted on {{ "{{ $labels.instance }}" }} VALUE={{ "{{ $value }}" }} LABELS={{ "{{ $labels }}" }}
