--- a/prometheus-redis-exporter/templates/servicemonitor.yaml
+++ b/prometheus-redis-exporter/templates/servicemonitor.yaml
@@ -2,10 +2,11 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-{{- if .Values.serviceMonitor.labels }}
   labels:
-{{ toYaml .Values.serviceMonitor.labels | indent 4}}
-{{- end }}
+    {{- include "prometheus-redis-exporter.labels" . | nindent 4 }}
+  {{- if .Values.serviceMonitor.additionalLabels }}
+{{ toYaml .Values.serviceMonitor.additionalLabels | indent 4 }}
+  {{- end }}
   name: {{ template "prometheus-redis-exporter.fullname" . }}
   namespace: {{ .Release.Namespace }}
 spec:
