--- a/prometheus-elasticsearch-exporter/Chart.yaml
+++ b/prometheus-elasticsearch-exporter/Chart.yaml
@@ -3,16 +3,16 @@ appVersion: 1.3.0
 description: Elasticsearch stats exporter for Prometheus
 home: https://github.com/prometheus-community/elasticsearch_exporter
 keywords:
-- exporter
-kubeVersion: '>=1.10.0-0'
+  - exporter
+kubeVersion: ">=1.10.0-0"
 maintainers:
-- email: sven.mueller@commercetools.com
-  name: svenmueller
-- email: cedric@desaintmartin.fr
-  name: desaintmartin
-- email: support@kubernetes.io
-  name: KubeGems
+  - email: sven.mueller@commercetools.com
+    name: svenmueller
+  - email: cedric@desaintmartin.fr
+    name: desaintmartin
+  - email: support@kubernetes.io
+    name: KubeGems
 name: prometheus-elasticsearch-exporter
 sources:
-- https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-elasticsearch-exporter
-version: 4.11.2
+  - https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-elasticsearch-exporter
+version: 4.12.1
