--- a/prometheus-elasticsearch-exporter/templates/cert-secret.yaml
+++ b/prometheus-elasticsearch-exporter/templates/cert-secret.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "elasticsearch-exporter.fullname" . }}-cert
+  name: {{ template "prometheus-elasticsearch-exporter.fullname" . }}-cert
   namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ template "elasticsearch-exporter.chart" . }}
-    app: {{ template "elasticsearch-exporter.name" . }}
+    chart: {{ template "prometheus-elasticsearch-exporter.chart" . }}
+    app: {{ template "prometheus-elasticsearch-exporter.name" . }}
 type: Opaque
 data:
   ca.pem: {{ .Values.es.ssl.ca.pem | b64enc }}
