--- a/prometheus-elasticsearch-exporter/templates/podsecuritypolicies.yaml
+++ b/prometheus-elasticsearch-exporter/templates/podsecuritypolicies.yaml
@@ -2,11 +2,11 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ template "elasticsearch-exporter.fullname" . }}
+  name: {{ template "prometheus-elasticsearch-exporter.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ template "elasticsearch-exporter.chart" . }}
-    app: {{ template "elasticsearch-exporter.name" . }}
+    chart: {{ template "prometheus-elasticsearch-exporter.chart" . }}
+    app: {{ template "prometheus-elasticsearch-exporter.name" . }}
 spec:
   privileged: false
   allowPrivilegeEscalation: false
